# WeNet-TPU

./: .gitignore  CMakeLists.txt  README.md  context.txt
cmake/: tpu.cmake
data/: merge_wav.py
decoder/: CMakeLists.txt  ctc_endpoint.cc  ctc_endpoint.h  params.h
kaldi/: CMakeLists.txt
scripts/: gen_bmodel.sh
toolchains/: aarch64-linux-gnu.toolchain.cmake
tpu/: CMakeLists.txt  tpu_asr_model.cc  tpu_asr_model.h
